src/objects/Ven_Standart_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Abschnitt__c</fullName>
        <description>Gibt an in welchen Abschnitt der Term auf dem Vertrag gruppiert werden soll.</description>
        <inlineHelpText>Gibt an in welchen Abschnitt der Term auf dem Vertrag gruppiert werden soll.</inlineHelpText>
        <label>Abschnitt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medialeistung</fullName>
                </value>
                <value>
                    <fullName>Abrechnung und Reporting</fullName>
                </value>
                <value>
                    <fullName>Kündigungsmöglichkeiten von 7V</fullName>
                </value>
                <value>
                    <fullName>Rechtsfolgen einer Kündigung durch SevenVentures</fullName>
                </value>
                <value>
                    <fullName>Beteiligungsvereinbarung (sofern Verträge nicht zeitgleich abgeschlossen werden)</fullName>
                </value>
                <value>
                    <fullName>Regelungen für Nachlaufphase</fullName>
                </value>
                <value>
                    <fullName>Individuelle Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Aktiv__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Gibt an ob der Term aktiv ist oder nicht!</description>
        <inlineHelpText>Gibt an ob der Term aktiv ist oder nicht!</inlineHelpText>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Beteiligungsvertrag_Mehrheit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</description>
        <inlineHelpText>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</inlineHelpText>
        <label>Direct Equity (majority)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Beteiligungsvertrag_Minderheit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Datensatztyp für SevenVentures mit Beteiligungsverträgen (Minderheit)</description>
        <inlineHelpText>Datensatztyp für SevenVentures mit Beteiligungsverträgen (Minderheit)</inlineHelpText>
        <label>Direct Equity (minority)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Call_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</description>
        <inlineHelpText>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</inlineHelpText>
        <label>Call Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Exit_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</description>
        <inlineHelpText>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</inlineHelpText>
        <label>Exit-Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Kombination_mit_Beteiligung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an ob dieser Term angezeigt werden soll, wenn im Vertrag eine Beteiligung von Seven Ventures angegeben ist.</description>
        <inlineHelpText>Gibt an ob dieser Term angezeigt werden soll, wenn im Vertrag eine Beteiligung von Seven Ventures angegeben ist.</inlineHelpText>
        <label>Kombination mit Beteiligung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Medialeistungsvertrag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</description>
        <inlineHelpText>Gibt an in ob in dieser Vertragsart der Term als Standart Term gültig ist.</inlineHelpText>
        <label>Medialeistungsvertrag (inkl. EP Light)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Priorit_t__c</fullName>
        <description>Hier wird die Priorität des Term angegeben.
1 = Hoch
2 = Niedrig</description>
        <inlineHelpText>Hier wird die Priorität des Term angegeben.
1 = Hoch
2 = Niedrig</inlineHelpText>
        <label>Priorität</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Service_Level__c</fullName>
        <description>Hier werden die Terms anhand des Service-Levels von Seven Ventures markiert.</description>
        <inlineHelpText>Hier werden die Terms anhand des Service-Levels von Seven Ventures markiert.</inlineHelpText>
        <label>Service-Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze (&lt;20% MG)</fullName>
                </value>
                <value>
                    <fullName>Silber (20-24% MG oder Media Investment)</fullName>
                </value>
                <value>
                    <fullName>Gold (25-30% MG oder strategischer Deal)</fullName>
                </value>
                <value>
                    <fullName>Platin (&gt;=30% MG oder strat. Prio-Deal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Standard_Term_Lang__c</fullName>
        <description>Hier wird der gesamte Text des Standart Term angezeigt.</description>
        <inlineHelpText>Hier wird der gesamte Text des Standart Term angezeigt.</inlineHelpText>
        <label>Standard Term (Lang)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Standard Term</label>
    <listViews>
        <fullName>Abrechnung_und_Reporting_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Abrechnung und Reporting</value>
        </filters>
        <label>Abrechnung und Reporting Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <columns>Ven_Abschnitt__c</columns>
        <columns>Ven_Kombination_mit_Beteiligung__c</columns>
        <columns>Ven_Service_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Beteiligungsvereinbarungs_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Kombination_mit_Beteiligung__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Beteiligungsvereinbarung (sofern Verträge nicht zeitgleich abgeschlossen werden)</value>
        </filters>
        <label>Beteiligungsvereinbarungs Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Individuelle_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Individuelle Terms</value>
        </filters>
        <label>Individuelle Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>K_ndigungsm_glichkeiten_von_7V_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Kündigungsmöglichkeiten von 7V</value>
        </filters>
        <label>Kündigungsmöglichkeiten von 7V Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Medialeistungsvertrags_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <columns>Ven_Service_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Medialeistung</value>
        </filters>
        <label>Medialeistungsvertrags Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Rechtsfolgen_einer_K_ndigung_durch_Seven</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Kombination_mit_Beteiligung__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Rechtsfolgen einer Kündigung durch SevenVentures</value>
        </filters>
        <label>Rechtsfolgen einer Kündigung.... Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Regelungen_f_r_nach_Vertragsende_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Abschnitt__c</field>
            <operation>equals</operation>
            <value>Regelungen für nach Vertragsende</value>
        </filters>
        <label>Regelungen für nach Vertragsende Terms</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Service_Level_Terms</fullName>
        <columns>NAME</columns>
        <columns>Ven_Standard_Term_Lang__c</columns>
        <columns>Ven_Service_Level__c</columns>
        <columns>Ven_Abschnitt__c</columns>
        <columns>Ven_Priorit_t__c</columns>
        <columns>Ven_Call_Option__c</columns>
        <columns>Ven_Beteiligungsvertrag_Mehrheit__c</columns>
        <columns>Ven_Exit_Participation__c</columns>
        <columns>Ven_Medialeistungsvertrag__c</columns>
        <columns>Ven_Aktiv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ven_Service_Level__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Service-Level-Terms</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Standart Terms-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>